<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>
        <TextView
            android:id="@+id/storeName"/>
    </TableRow>
    <TableRow>
        <Button
            android:text="@string/dairy_label"
            android:id="@+id/Dairy"/>

        <Button
            android:text="@string/meat_label"
            android:id="@+id/Meat"/>

    </TableRow>
    <TableRow>
        <Button
            android:text="@string/produce_label"
            android:id="@+id/Produce"/>
        <Button
            android:text="@string/bakery_label"
            android:id="@+id/Bakery"/>

    </TableRow>
    <TableRow>
        <Button
            android:text="@string/bath_label"
            android:id="@+id/Bath"/>
        <Button
            android:text="@string/food_beverage_label"
            android:id="@+id/Food_N_Beverages"/>

    </TableRow>



</TableLayout>